--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="header_more-inf" 
+      <a class="more-inf" 
       href="https://goal-life.com/page/method/matrix-eisenhower"
       >
       Want more details?</a>
      </div>
-    <div class="main">
+    <div class="centered-main-page-element">
       <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
         <div class="new-task-wrapper">
