fix: add alt attribute to images accorging to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
   </head>
   <body>
     <header class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="matrix">
       <a class="more-inf" 
-      href="https://goal-life.com/page/method/matrix-eisenhower"
-      >
+      href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?</a>
      </header>
     <main class="centered-main-page-element">
       <section id="top-section-for-adding-element-to-list">
         <h3>Add Item</h3>
-        <div class="new-task-wrapper">
-          <input id="new-task"class="new-task" type="text">
+          <input id="new-task" class="new-task" type="text">
           <button>Add</button>
-        </div>
       </section>
       <section>
         <h3>Todo</h3>
@@ -30,7 +27,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove">
             </button>
           </li>
           <li class="edit-mode">
@@ -39,7 +36,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
@@ -53,7 +50,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
