--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?</a>
      </header>
-    <main class="centered-main-page-element">
-      <section id="top-section-for-adding-element-to-list">
+    <main class="main">
+      <section id="add-task">
         <h3>Add Item</h3>
           <input id="new-task" class="new-task" type="text">
           <button>Add</button>
