--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <input id="new-task" class="new-task" type="text">
           <button>Add</button>
       </section>
-      <section>
+      <section id="todo-task">
         <h3>Todo</h3>
         <ul id="incomplete-tasks">
-          <li>
+          <li class="add-mode">
             <input type="checkbox">
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
@@ -41,10 +41,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="complete-task">
         <h3>Completed</h3>
         <ul id="completed-tasks">
-          <li>
+          <li class="complete-mode">
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
